k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kukuk-frontend
  labels:
    app: kukuk-frontend
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: kukuk-frontend
